// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`convertOrdersToCSV 1`] = `
"Pair,Order Hash,Version,Time(UTC),Side,Price,Amount,Fill,Fee,Expiry(UTC),Status,Transaction Hash
test,test,1,1970-01-01 00:00:00,Sell,123,123,246,123 test,1970-01-15 06:56:07,Open,test
"
`;

exports[`convertOrdersToCSV 2`] = `
"Pair,Order Hash,Version,Time(UTC),Side,Price,Amount,Fill,Fee,Expiry(UTC),Status,Transaction Hash
test,test,1,1970-01-01 00:00:00,Sell,123,123,246,123 test,1970-01-15 06:56:07,Cancelled due to custodian reset,test
"
`;

exports[`convertOrdersToCSV 3`] = `
"Pair,Order Hash,Version,Time(UTC),Side,Price,Amount,Fill,Fee,Expiry(UTC),Status,Transaction Hash
test,test,1,1970-01-01 00:00:00,Buy,123,123,246,123 test,1970-01-15 06:56:07,Cancelled due to insufficent balance,
"
`;

exports[`convertOrdersToCSV 4`] = `
"Pair,Order Hash,Version,Time(UTC),Side,Price,Amount,Fill,Fee,Expiry(UTC),Status,Transaction Hash
test,test,1,1970-01-01 00:00:00,Sell,123,123,246,123 test,1970-01-15 06:56:07,Cancelled due to settlement error,test
"
`;

exports[`convertOrdersToCSV 5`] = `
"Pair,Order Hash,Version,Time(UTC),Side,Price,Amount,Fill,Fee,Expiry(UTC),Status,Transaction Hash
test,test,1,1970-01-01 00:00:00,Sell,123,123,246,123 test,1970-01-15 06:56:07,Fully filled,test
"
`;

exports[`convertOrdersToCSV 6`] = `
"Pair,Order Hash,Version,Time(UTC),Side,Price,Amount,Fill,Fee,Expiry(UTC),Status,Transaction Hash
test,test,1,1970-01-01 00:00:00,Sell,123,123,246,123 test,1970-01-15 06:56:07,Expired,test
"
`;

exports[`convertOrdersToCSV 7`] = `
"Pair,Order Hash,Version,Time(UTC),Side,Price,Amount,Fill,Fee,Expiry(UTC),Status,Transaction Hash
test,test,1,1970-01-01 00:00:00,Sell,123,123,246,123 test,1970-01-15 06:56:07,Expired,test
"
`;

exports[`convertOrdersToCSV 8`] = `
"Pair,Order Hash,Version,Time(UTC),Side,Price,Amount,Fill,Fee,Expiry(UTC),Status,Transaction Hash
test,test,1,1970-01-01 00:00:00,Sell,123,123,246,123 test,1970-01-15 06:56:07,Open,test
"
`;

exports[`convertOrdersToCSV 9`] = `
"Pair,Order Hash,Version,Time(UTC),Side,Price,Amount,Fill,Fee,Expiry(UTC),Status,Transaction Hash
test,test,2,1970-01-01 00:00:00,Sell,123,123,246,123 test,1970-01-15 06:56:07,Open,test
test,test,1,1970-01-01 00:00:00,Sell,123,123,246,123 test,1970-01-15 06:56:07,Open,test
"
`;

exports[`convertOrdersToCSV 10`] = `
"Pair,Order Hash,Version,Time(UTC),Side,Price,Amount,Fill,Fee,Expiry(UTC),Status,Transaction Hash
test,test,1,1970-01-01 00:00:00,Sell,123,123,246,123 test,1970-01-15 06:56:07,Pending settlement,test
"
`;

exports[`convertOrdersToCSV 11`] = `
"Pair,Order Hash,Version,Time(UTC),Side,Price,Amount,Fill,Fee,Expiry(UTC),Status,Transaction Hash
test,test,1,1970-01-01 00:00:00,Sell,123,123,246,123 test,1970-01-15 06:56:07,Cancelled by user,test
"
`;

exports[`getEtherScanAddressLink 1`] = `"https://kovan.etherscan.io/address/address"`;

exports[`getEtherScanTokenLink 1`] = `"https://kovan.etherscan.io/token/tokenAddr"`;

exports[`getEtherScanTokenLink 2`] = `"https://kovan.etherscan.io/token/tokenAddr?a=account"`;

exports[`getEtherScanTransactionLink 1`] = `"https://kovan.etherscan.io/tx/txHash"`;

exports[`getMaturityDescription 1`] = `"This contract never expires."`;

exports[`getOrderDescription 1`] = `"Buy 123 code1 at 123 code2 per code1. Total 123.0 filled."`;

exports[`getOrderFullDescription 1`] = `"Buy 123 code1 at 123 code2 per code1. Valid till 1970-01-01 12:00:00"`;

exports[`getOrderFullDescription 2`] = `"Buy 123 code1 at 123 code2 per code1. Valid till 1970-01-01 12:00:00"`;

exports[`getOrderFullDescription 3`] = `"Buy 123 code1 at 123 code2 per code1. 100(81%) filled.Pending settlement"`;

exports[`getOrderFullDescription 4`] = `"Buy 123 code1 at 123 code2 per code1. 100(81%) filled."`;

exports[`getOrderFullDescription 5`] = `"Buy 123 code1 at 123 code2 per code1. Fully filled"`;

exports[`getOrderFullDescription 6`] = `"Buy 123 code1 at 123 code2 per code1. Cancelled by user."`;

exports[`getOrderFullDescription 7`] = `"Buy 123 code1 at 123 code2 per code1. Expired."`;

exports[`getOrderFullDescription 8`] = `"Buy 123 code1 at 123 code2 per code1. Cancelled due to insufficient balance."`;

exports[`getOrderFullDescription 9`] = `"Buy 123 code1 at 123 code2 per code1. 0(0%) filled. Cancelled due to settlement error."`;

exports[`getOrderFullDescription 10`] = `"Sell 123 code1 at 123 code2 per code1. Cancelled due to custodian reset."`;

exports[`getVersionDescription 1`] = `"Order placed."`;

exports[`getVersionDescription 2`] = `"Fully filled"`;

exports[`getVersionDescription 3`] = `"Cancelled by user"`;

exports[`getVersionDescription 4`] = `"Expired"`;

exports[`getVersionDescription 5`] = `"Cancelled due to insufficent balance"`;

exports[`getVersionDescription 6`] = `"Cancelled due to settlement error"`;

exports[`getVersionDescription 7`] = `"Cancelled due to custodian reset"`;

exports[`getVersionDescription 8`] = `"Total 100.0 filled, pending settlement"`;

exports[`getVersionDescription 9`] = `"Total 100.0 filled"`;

exports[`wrapCSVString 1`] = `"\\"te,st\\""`;
